--- a/google-cloud-build/ci-scripts/build_master_branch.yaml
+++ b/google-cloud-build/ci-scripts/build_master_branch.yaml
@@ -63,7 +63,28 @@ steps:
           '$COMMIT_SHA',
           '${_DOCKER_USER}',
           ]
-- id: 'Check push'
+- id: 'Check push to internal build cache'
+  name: 'gcr.io/cloud-builders/gsutil'
+  entrypoint: "bash"
+  args: [
+          'google-cloud-build/ci-scripts/scripts/check_build.sh', 
+          '${_LOG_BUCKET}', 
+          '${_FLAVOR}', 
+          '$BUILD_ID'
+          ]
+- id: 'Push images to public build cache'
+  name: 'gcr.io/script-languages/build-container'
+  args: [
+          'bash',
+          'google-cloud-build/ci-scripts/scripts/push.sh',
+          '${_FLAVORS}',
+          '${_RELEASE_DOCKER_REPOSITORY}',
+          '$COMMIT_SHA',
+          '""',
+          '""',
+          '${_DOCKER_USER}',
+          ]
+- id: 'Check push to public build cache'
   name: 'gcr.io/cloud-builders/gsutil'
   entrypoint: "bash"
   args: [
