--- a/google-cloud-build/ci-scripts/build_master_branch.yaml
+++ b/google-cloud-build/ci-scripts/build_master_branch.yaml
@@ -1,14 +1,24 @@
 steps:
+- id: 'Decrypt Docker password'
+  name: 'gcr.io/cloud-builders/gcloud'
+  entrypoint: bash
+  args: [
+          'google-cloud-build/ci-scripts/scripts/decrypt.sh',
+          '${_DOCKER_PASSWORD}',
+          'DOCKER_PASSWORD',
+          '${_KEY_RING_NAME}',
+          '${_KEY_NAME}'
+          ]
 - id: 'Build build-container'
   name: 'gcr.io/cloud-builders/docker'
+  entrypoint: "bash"
   args: [
-          'build', 
-          '-t', 
-          'gcr.io/script-languages/build-container', 
-          'google-cloud-build/ci-scripts/scripts/'
+          'google-cloud-build/ci-scripts/scripts/build_or_pull_build_container.sh',
+          '${_BUILD_DOCKER_REPOSITORY}',
+          '${_DOCKER_USER}'
           ]
 - id: 'Build images'
-  name: 'gcr.io/script-languages/build-container'
+  name: 'exasol/script-languages:build-container'
   args: [
           'bash', 
           'google-cloud-build/ci-scripts/scripts/build.sh', 
@@ -25,7 +35,7 @@ steps:
           "$BUILD_ID"
           ]
 - id: 'Run tests'
-  name: 'gcr.io/script-languages/build-container'
+  name: 'exasol/script-languages:build-container'
   args: [
           'bash', 
           'google-cloud-build/ci-scripts/scripts/test.sh', 
@@ -40,18 +50,8 @@ steps:
           '${_FLAVOR}', 
           '$BUILD_ID'
           ]
-- id: 'Decrypt Docker password'
-  name: 'gcr.io/cloud-builders/gcloud'
-  entrypoint: bash
-  args: [
-          'google-cloud-build/ci-scripts/scripts/decrypt.sh',
-          '${_DOCKER_PASSWORD}',
-          'DOCKER_PASSWORD',
-          '${_KEY_RING_NAME}',
-          '${_KEY_NAME}'
-          ]
 - id: 'Push images to internal build cache with commit hash'
-  name: 'gcr.io/script-languages/build-container'
+  name: 'exasol/script-languages:build-container'
   args: [
           'bash',
           'google-cloud-build/ci-scripts/scripts/push.sh',
@@ -72,7 +72,7 @@ steps:
           '$BUILD_ID'
           ]
 - id: 'Push images to internal build cache without commit hash'
-  name: 'gcr.io/script-languages/build-container'
+  name: 'exasol/script-languages:build-container'
   args: [
           'bash',
           'google-cloud-build/ci-scripts/scripts/push.sh',
@@ -93,11 +93,11 @@ steps:
           '$BUILD_ID'
           ]
 - id: 'Push images to public build cache'
-  name: 'gcr.io/script-languages/build-container'
+  name: 'exasol/script-languages:build-container'
   args: [
           'bash',
           'google-cloud-build/ci-scripts/scripts/push.sh',
-          '${_FLAVORS}',
+          '${_FLAVOR}',
           '${_RELEASE_DOCKER_REPOSITORY}',
           '""',
           '${_RELEASE_DOCKER_REPOSITORY}',
