--- a/google-cloud-build/ci-scripts/export.yaml
+++ b/google-cloud-build/ci-scripts/export.yaml
@@ -1,12 +1,4 @@
 steps:
-- id: 'Build build-container'
-  name: 'gcr.io/cloud-builders/docker'
-  args: [
-          'build', 
-          '-t', 
-          'gcr.io/script-languages/build-container', 
-          'google-cloud-build/ci-scripts/scripts/'
-          ]
 - id: 'Decrypt Docker password'
   name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: bash
@@ -17,8 +9,16 @@ steps:
           '${_KEY_RING_NAME}',
           '${_KEY_NAME}'
           ]
+- id: 'Build build-container'
+  name: 'gcr.io/cloud-builders/docker'
+  entrypoint: "bash"
+  args: [
+          'google-cloud-build/ci-scripts/scripts/build_or_pull_build_container.sh',
+          '${_BUILD_DOCKER_REPOSITORY}',
+          '${_DOCKER_USER}'
+          ]
 - id: 'Export container'
-  name: 'gcr.io/script-languages/build-container'
+  name: 'exasol/script-languages:build-container'
   args: [
           'bash',
           'google-cloud-build/ci-scripts/scripts/export.sh',
