Fixes and improvements for Google Cloud Build CI Setup (#123)
Trigger Changes:
- Master branch and release trigger react on ci-release-test
- Fix trigger directories for build jobs
- Add repo name to the trigger name

Build Cache Changes:
- Move push to public build cache into the build jobs for the master branch
- All build trigger push to internal build cache with commit hash and without
- Pull build-container if possible or build and push it with build_or_pull_build_container.sh
- If the test-container not available in the public build cache, then build and push it to the build caches

Exaslct Tests Change:
- Fix test_branch_exaslct.yaml
- Fix GitHub status name for exaslct tests

Additional Changes:
- Add scripts download_config.sh and update_triggers.sh
- Use parallel copy with gsutils
- Build steps which use docker, now list the local docker images at the end
- Move job build output to subdirectory in exaslct output directory to not copy the cache during check_build.sh

--- a/google-cloud-build/ci-scripts/build_master_branch.yaml
+++ b/google-cloud-build/ci-scripts/build_master_branch.yaml
@@ -92,6 +92,27 @@ steps:
           '${_FLAVOR}', 
           '$BUILD_ID'
           ]
+- id: 'Push images to public build cache'
+  name: 'exasol/script-languages:build-container'
+  args: [
+          'bash',
+          'google-cloud-build/ci-scripts/scripts/push.sh',
+          '${_FLAVOR}',
+          '${_RELEASE_DOCKER_REPOSITORY}',
+          '""',
+          '${_RELEASE_DOCKER_REPOSITORY}',
+          '""',
+          '${_DOCKER_USER}',
+          ]
+- id: 'Check push to public build cache'
+  name: 'gcr.io/cloud-builders/gsutil'
+  entrypoint: "bash"
+  args: [
+          'google-cloud-build/ci-scripts/scripts/check_build.sh', 
+          '${_LOG_BUCKET}', 
+          '${_FLAVOR}', 
+          '$BUILD_ID'
+          ]
 timeout: "9000s"
 options:
   machineType: 'N1_HIGHCPU_8'
