--- a/google-cloud-build/ci-scripts/release.yaml
+++ b/google-cloud-build/ci-scripts/release.yaml
@@ -1,28 +1,26 @@
 steps:
-- id: 'Build build-container'
-  name: 'gcr.io/cloud-builders/docker'
-  args: [
-          'build', 
-          '-t', 
-          'gcr.io/script-languages/build-container', 
-          'google-cloud-build/ci-scripts/scripts/'
-          ]
 - id: 'Decrypt Docker password'
   name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: bash
   args: [
-          '-x',
           'google-cloud-build/ci-scripts/scripts/decrypt.sh',
           '${_DOCKER_PASSWORD}',
           'DOCKER_PASSWORD',
           '${_KEY_RING_NAME}',
           '${_KEY_NAME}'
           ]
+- id: 'Build build-container'
+  name: 'gcr.io/cloud-builders/docker'
+  entrypoint: "bash"
+  args: [
+          'google-cloud-build/ci-scripts/scripts/build_or_pull_build_container.sh',
+          '${_BUILD_DOCKER_REPOSITORY}',
+          '${_DOCKER_USER}'
+          ]
 - id: 'Decrypt Github Token'
   name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: bash
   args: [
-          '-x',
           'google-cloud-build/ci-scripts/scripts/decrypt.sh',
           '${_GITHUB_TOKEN}',
           'GITHUB_TOKEN',
@@ -30,7 +28,7 @@ steps:
           '${_KEY_NAME}'
           ]
 - id: 'Export container'
-  name: 'gcr.io/script-languages/build-container'
+  name: 'exasol/script-languages:build-container'
   args: [
           'bash',
           'google-cloud-build/ci-scripts/scripts/export.sh',
@@ -53,33 +51,13 @@ steps:
 - id: 'Upload exported container'
   name: 'gcr.io/cloud-builders/gsutil'
   args: [
+          '-m',
           'cp',
           '.build_output/cache/exports/*',
           '${_CONTAINER_BUCKET}/exports/$COMMIT_SHA/'
           ]
-- id: 'Push images to public build cache'
-  name: 'gcr.io/script-languages/build-container'
-  args: [
-          'bash',
-          'google-cloud-build/ci-scripts/scripts/push.sh',
-          '${_FLAVORS}',
-          '${_BUILD_DOCKER_REPOSITORY}',
-          '$COMMIT_SHA',
-          '""',
-          '""',
-          '${_DOCKER_USER}',
-          ]
-- id: 'Check push'
-  name: 'gcr.io/cloud-builders/gsutil'
-  entrypoint: "bash"
-  args: [
-          'google-cloud-build/ci-scripts/scripts/check_build.sh', 
-          '${_LOG_BUCKET}', 
-          '${_FLAVOR}', 
-          '$BUILD_ID'
-          ]
 - id: 'Create Github Release'
-  name: 'gcr.io/script-languages/build-container'
+  name: 'exasol/script-languages:build-container'
   args: [
           'bash',
           'google-cloud-build/ci-scripts/scripts/create_github_release.sh', 
