--- a/flavors/python3-ds-EXASOL-6.0.0/flavor_base/build_deps/Dockerfile
+++ b/flavors/python3-ds-EXASOL-6.0.0/flavor_base/build_deps/Dockerfile
@@ -20,7 +20,7 @@ RUN apt-get -y update && \
     apt-get -y clean && \
     apt-get -y autoremove
 	  
-RUN curl -L -o swig-2.0.4.tar.gz prdownloads.sourceforge.net/swig/swig-2.0.4.tar.gz && \
+RUN curl -L -o swig-2.0.4.tar.gz https://storage.googleapis.com/exasol-script-languages-dependencies/swig-2.0.4.tar.gz && \
     tar zxf swig-2.0.4.tar.gz && \
     (cd swig-2.0.4 && ./configure --prefix=/usr && make && make install) && \
     rm -rf swig-2.0.4 swig-2.0.4.tar.gz
