Improve flavor customization (#140)
- Improve Flavor Customization
  - Improve the section in the README
  - Add documentation to flavor_customization Dockerfile
  - Provide install package lists in flavor_customization which get automatically installed 
- Improve Flavor Documentation
  - Add Descriptions to each flavor with links to the package list files
  - Move flavor overview documentation to release repository
- Improve install scripts
  - option --with-versions
  - option --allow-no-versions
  - Install list new package version for apt installs
  - Add install_via_r_remotes.pl which uses R remotes package, which seems to be more recent than R versions
  - Fix install_via_r_versions.pl which didn't work with standard-6.0.0, because R 3.2 expects a repos argument in install.packages
- Other fixes:
  - Download swig from own google cloud bucket to make the download more reliable
  - Fix bug where export shows "Copied to None"
  - Pin Keras to version 2.3.1 for the python3-ds flavors, because newer versions are not compatible with Tensorflow 1.13

solves #45
makes progress on #119

--- a/flavors/python3-ds-EXASOL-6.1.0/flavor_base/build_deps/Dockerfile
+++ b/flavors/python3-ds-EXASOL-6.1.0/flavor_base/build_deps/Dockerfile
@@ -14,7 +14,7 @@ ENV BAZEL_PACKAGE_VERSION="1.1.0"
 ENV BAZEL_PACKAGE_FILE="bazel_$BAZEL_PACKAGE_VERSION-linux-x86_64.deb"
 ENV BAZEL_PACKAGE_URL="https://github.com/bazelbuild/bazel/releases/download/$BAZEL_PACKAGE_VERSION/$BAZEL_PACKAGE_FILE"
 
-RUN /scripts/install_via_apt.pl --file /build_info/packages/build_deps/apt_get_packages
+RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/build_deps/apt_get_packages
 
 RUN apt-get -y update && \
     curl -L --output "$BAZEL_PACKAGE_FILE" "$BAZEL_PACKAGE_URL" && \
@@ -23,7 +23,7 @@ RUN apt-get -y update && \
     apt-get -y clean && \
     apt-get -y autoremove
 	  
-RUN curl -L -o swig-2.0.4.tar.gz prdownloads.sourceforge.net/swig/swig-2.0.4.tar.gz && \
+RUN curl -L -o swig-2.0.4.tar.gz https://storage.googleapis.com/exasol-script-languages-dependencies/swig-2.0.4.tar.gz && \
     tar zxf swig-2.0.4.tar.gz && \
     (cd swig-2.0.4 && ./configure --prefix=/usr && make && make install) && \
     rm -rf swig-2.0.4 swig-2.0.4.tar.gz
