--- a/flavors/python3-ds-EXASOL-6.1.0/flavor_customization/Dockerfile
+++ b/flavors/python3-ds-EXASOL-6.1.0/flavor_customization/Dockerfile
@@ -28,7 +28,7 @@ RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/flav
 # Below this text you can add any Dockerfile commands except of FROM.            
 # However only commands which change the filesystem will be              
 # reflected to the final script-language container.                      
-# We recommand to use only RUN, COPY and ADD. For example, WORKDIR, USER 
+# We recommend to use only RUN, COPY and ADD. For example, WORKDIR, USER 
 # and ENV will be not carried over into the final container. For more 
 # information about Dockerfile commands, please check the reference 
 # https://docs.docker.com/engine/reference/builder/#dockerfile-reference 
