--- a/exaudfclient/base/BUILD
+++ b/exaudfclient/base/BUILD
@@ -112,6 +112,7 @@ cc_binary(
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON2_DEPS+
           ["//exaudflib:exaudflib-deps"],
     defines = VM_ENABLED_DEFINES,
+    copts=["-DLMOPEN_LIBEXAUDFLIB_PATH"],
     data = [":libexaudflib_complete.so"],
 )
 
@@ -122,9 +123,29 @@ cc_binary(
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON3_DEPS+
             ["//exaudflib:exaudflib-deps"],
     defines = VM_ENABLED_DEFINES,
+    copts=["-DLMOPEN_LIBEXAUDFLIB_PATH"],
     data = [":libexaudflib_complete.so"]
 )
 
+cc_binary(
+    name = "exaudfclient_dlopen_bin",
+    srcs = ["exaudfclient.cc"],
+    linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
+    deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON2_DEPS+
+          ["//exaudflib:exaudflib-deps"],
+    defines = VM_ENABLED_DEFINES,
+    data = [":libexaudflib_complete.so"],
+)
+
+cc_binary(
+    name = "exaudfclient_py3_dlopen_bin",
+    srcs = ["exaudfclient.cc"],
+    linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
+    deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON3_DEPS+
+            ["//exaudflib:exaudflib-deps"],
+    defines = VM_ENABLED_DEFINES,
+    data = [":libexaudflib_complete.so"]
+)
 # Workarround for the hardcoded paths in exaudfclient for libexaudflib_complete.so and python_ext_dataframe.cc
 # - libexaudflib_complete.so and python_ext_dataframe.cc get dynamically loaded, therefore the exaudfclient needs to know their paths
 # - Most flexible way to provides these paths would environment variables
@@ -135,23 +156,21 @@ cc_binary(
 
 sh_library(
     name = "wrapper_generator_bin",
-    srcs=select({
-        "//:valgrind_wrapper": ["//:create_binary_wrapper_valgrind.sh"],
-        "//:valgrind_massif_wrapper": ["//:create_binary_wrapper_valgrind_massif.sh"],
-        "//:stdout_to_bucketfs": ["//:create_binary_wrapper_stdout_to_bucketfs.sh"],
-        "//conditions:default": ["//:create_binary_wrapper.sh"]
-    })
+    srcs=["//:create_binary_wrapper.sh"]
 ) 
 
 SLOW_WRAPPER_BINARY_PY2="""$(location //:wrapper_generator_bin) "$(location exaudfclient_bin)" "$(location exaudfclient)" "$(location exaudfclient.template.sh)" """
+
 FAST_BINARY_PY2="""cp "$(location exaudfclient_bin)" "$(location exaudfclient)" """
+
 CREATE_BINARY_PY2_SCRIPT=select({
         "//:fast_binary": FAST_BINARY_PY2,
         "//:slow_wrapper": SLOW_WRAPPER_BINARY_PY2,
         "//conditions:default": FAST_BINARY_PY2
     })
+
 genrule(
-    name = "exaudfclient",
+    name = "exaudfclient_genrule",
     cmd = CREATE_BINARY_PY2_SCRIPT,
     outs = ["exaudfclient"],
     srcs = [":exaudfclient_bin", "//:libexaudflib_complete.so", "exaudfclient.template.sh","//:wrapper_generator_bin"],
@@ -159,14 +178,17 @@ genrule(
 )
 
 SLOW_WRAPPER_BINARY_PY3="""$(location //:wrapper_generator_bin) "$(location exaudfclient_py3_bin)" "$(location exaudfclient_py3)" "$(location exaudfclient.template.sh)" """
+
 FAST_BINARY_PY3="""cp "$(location exaudfclient_py3_bin)" "$(location exaudfclient_py3)" """
+
 CREATE_BINARY_PY3_SCRIPT=select({
         "//:fast_binary": FAST_BINARY_PY3,
         "//:slow_wrapper": SLOW_WRAPPER_BINARY_PY3,
         "//conditions:default": FAST_BINARY_PY3
     })
+
 genrule(
-    name = "exaudfclient_py3",
+    name = "exaudfclient_py3_genrule",
     cmd = CREATE_BINARY_PY3_SCRIPT,
     outs = ["exaudfclient_py3"],
     srcs = [":exaudfclient_py3_bin", "//:libexaudflib_complete.so", "exaudfclient.template.sh", "//:wrapper_generator_bin"],
