--- a/exaudfclient/base/BUILD
+++ b/exaudfclient/base/BUILD
@@ -105,6 +105,25 @@ VM_PYTHON3_DEPS=select({
         "//conditions:default": []
     }) 
 
+genrule(
+    name="debug_udfclient_wrapper_scripts",
+    cmd = "cp $(SRCS) $(@D)",
+    outs=["debug_udfclient_wrapper_stdouterr_to_bucketfs.sh",
+          "debug_udfclient_wrapper_valgrind_massif.sh",
+          "debug_udfclient_wrapper_valgrind_memcheck.sh"],
+    srcs=["//:debug_udfclient_wrapper_scripts/debug_udfclient_wrapper_stdouterr_to_bucketfs.sh",
+          "//:debug_udfclient_wrapper_scripts/debug_udfclient_wrapper_valgrind_massif.sh",
+          "//:debug_udfclient_wrapper_scripts/debug_udfclient_wrapper_valgrind_memcheck.sh"
+          ],
+    output_to_bindir = True
+    )
+
+sh_binary(name="debug_udfclient_wrapper_runner",
+          srcs=["//:debug_udfclient_wrapper_runner.sh"],
+          )
+
+
+DEBUG_UDFCLIENT_WRAPPER_SCRIPTS=["//:debug_udfclient_wrapper_runner", "//:debug_udfclient_wrapper_scripts"]
 cc_binary(
     name = "exaudfclient_bin",
     srcs = ["exaudfclient.cc"],
@@ -113,7 +132,6 @@ cc_binary(
           ["//exaudflib:exaudflib-deps"],
     defines = VM_ENABLED_DEFINES,
     copts=["-DLMOPEN_LIBEXAUDFLIB_PATH"],
-    data = [":libexaudflib_complete.so"],
 )
 
 cc_binary(
@@ -124,7 +142,6 @@ cc_binary(
             ["//exaudflib:exaudflib-deps"],
     defines = VM_ENABLED_DEFINES,
     copts=["-DLMOPEN_LIBEXAUDFLIB_PATH"],
-    data = [":libexaudflib_complete.so"]
 )
 
 cc_binary(
@@ -134,17 +151,15 @@ cc_binary(
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON2_DEPS+
           ["//exaudflib:exaudflib-deps"],
     defines = VM_ENABLED_DEFINES,
-    data = [":libexaudflib_complete.so"],
 )
 
 cc_binary(
-    name = "exaudfclient_py3_dlopen_bin",
+    name = "exaudfclient_dlopen_py3_bin",
     srcs = ["exaudfclient.cc"],
     linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON3_DEPS+
             ["//exaudflib:exaudflib-deps"],
     defines = VM_ENABLED_DEFINES,
-    data = [":libexaudflib_complete.so"]
 )
 # Workarround for the hardcoded paths in exaudfclient for libexaudflib_complete.so and python_ext_dataframe.cc
 # - libexaudflib_complete.so and python_ext_dataframe.cc get dynamically loaded, therefore the exaudfclient needs to know their paths
@@ -157,40 +172,69 @@ cc_binary(
 sh_library(
     name = "wrapper_generator_bin",
     srcs=["//:create_binary_wrapper.sh"]
-) 
+)
+
+
+EXAUDFCLIENT_GENRULE_SRCS=["//:libexaudflib_complete.so","//:wrapper_generator_bin","//:exaudfclient.template.sh"]+\
+                          DEBUG_UDFCLIENT_WRAPPER_SCRIPTS
 
 SLOW_WRAPPER_BINARY_PY2="""$(location //:wrapper_generator_bin) "$(location exaudfclient_bin)" "$(location exaudfclient)" "$(location exaudfclient.template.sh)" """
-
 FAST_BINARY_PY2="""cp "$(location exaudfclient_bin)" "$(location exaudfclient)" """
-
 CREATE_BINARY_PY2_SCRIPT=select({
         "//:fast_binary": FAST_BINARY_PY2,
         "//:slow_wrapper": SLOW_WRAPPER_BINARY_PY2,
         "//conditions:default": FAST_BINARY_PY2
     })
-
 genrule(
     name = "exaudfclient_genrule",
     cmd = CREATE_BINARY_PY2_SCRIPT,
     outs = ["exaudfclient"],
-    srcs = [":exaudfclient_bin", "//:libexaudflib_complete.so", "exaudfclient.template.sh","//:wrapper_generator_bin"],
+    srcs = [":exaudfclient_bin"]+EXAUDFCLIENT_GENRULE_SRCS,
+    output_to_bindir = True
+)
+
+SLOW_WRAPPER_BINARY_DLOPEN_PY2="""$(location //:wrapper_generator_bin) "$(location exaudfclient_dlopen_bin)" "$(location exaudfclient_dlopen)" "$(location exaudfclient.template.sh)" """
+FAST_BINARY_DLOPEN_PY2="""cp "$(location exaudfclient_dlopen_bin)" "$(location exaudfclient_dlopen)" """
+CREATE_BINARY_DLOPEN_PY2_SCRIPT=select({
+        "//:fast_binary": FAST_BINARY_DLOPEN_PY2,
+        "//:slow_wrapper": SLOW_WRAPPER_BINARY_DLOPEN_PY2,
+        "//conditions:default": FAST_BINARY_DLOPEN_PY2
+    })
+genrule(
+    name = "exaudfclient_dlopen_genrule",
+    cmd = CREATE_BINARY_DLOPEN_PY2_SCRIPT,
+    outs = ["exaudfclient_dlopen"],
+    srcs = [":exaudfclient_dlopen_bin"]+EXAUDFCLIENT_GENRULE_SRCS,
     output_to_bindir = True
 )
 
 SLOW_WRAPPER_BINARY_PY3="""$(location //:wrapper_generator_bin) "$(location exaudfclient_py3_bin)" "$(location exaudfclient_py3)" "$(location exaudfclient.template.sh)" """
-
 FAST_BINARY_PY3="""cp "$(location exaudfclient_py3_bin)" "$(location exaudfclient_py3)" """
-
 CREATE_BINARY_PY3_SCRIPT=select({
         "//:fast_binary": FAST_BINARY_PY3,
         "//:slow_wrapper": SLOW_WRAPPER_BINARY_PY3,
         "//conditions:default": FAST_BINARY_PY3
     })
-
 genrule(
     name = "exaudfclient_py3_genrule",
     cmd = CREATE_BINARY_PY3_SCRIPT,
     outs = ["exaudfclient_py3"],
-    srcs = [":exaudfclient_py3_bin", "//:libexaudflib_complete.so", "exaudfclient.template.sh", "//:wrapper_generator_bin"],
+    srcs = [":exaudfclient_py3_bin"]+EXAUDFCLIENT_GENRULE_SRCS,
+    output_to_bindir = True
+)
+
+
+SLOW_WRAPPER_BINARY_DLOPEN_PY3="""$(location //:wrapper_generator_bin) "$(location exaudfclient_dlopen_py3_bin)" "$(location exaudfclient_dlopen_py3)" "$(location exaudfclient.template.sh)" """
+FAST_BINARY_DLOPEN_PY3="""cp "$(location exaudfclient_dlopen_py3_bin)" "$(location exaudfclient_dlopen_py3)" """
+CREATE_BINARY_DLOPEN_PY3_SCRIPT=select({
+        "//:fast_binary": FAST_BINARY_DLOPEN_PY3,
+        "//:slow_wrapper": SLOW_WRAPPER_BINARY_DLOPEN_PY3,
+        "//conditions:default": FAST_BINARY_DLOPEN_PY3
+    })
+genrule(
+    name = "exaudfclient_dlopen_py3_genrule",
+    cmd = CREATE_BINARY_DLOPEN_PY3_SCRIPT,
+    outs = ["exaudfclient_dlopen_py3"],
+    srcs = [":exaudfclient_dlopen_py3_bin"]+EXAUDFCLIENT_GENRULE_SRCS,
     output_to_bindir = True
 )
