--- a/flavors/python3-ds-cuda-preview-EXASOL-6.1.0/flavor_base/release/Dockerfile
+++ b/flavors/python3-ds-cuda-preview-EXASOL-6.1.0/flavor_base/release/Dockerfile
@@ -21,3 +21,7 @@ RUN ldconfig
 
 COPY --from={{build_run}} /exaudf /exaudf
 COPY --from={{build_run}} /build_info /build_info
+
+RUN mkdir -p /build_info/actual_installed_packages/release && \
+    /scripts/list_installed_scripts/list_installed_apt.sh > /build_info/actual_installed_packages/release/apt_get_packages && \
+    /scripts/list_installed_scripts/list_installed_pip.sh python3.6 > /build_info/actual_installed_packages/release/python3_pip_packages
