Import test environment as package instead as a git submodule

--- a/Pipfile
+++ b/Pipfile
@@ -1,5 +1,4 @@
 [packages]
-luigi = "==2.8.11"
 jinja2 = "==2.10.3"
 humanfriendly = "==4.18"
 jsonpickle = "==1.2"
@@ -7,8 +6,7 @@ simplejson = "==3.17.0"
 docker = "==4.1.0"
 netaddr = "==0.7.19"
 click = "==7.1.2"
-requests = "==2.22.0"
 networkx = "==2.4"
 pydot = "==1.4.1"
 "stopwatch.py" = "==1.0.1"
-gitpython = "==3.0.8"
+exasol-integration-test-docker-environment = {git = "https://github.com/exasol/integration-test-docker-environment.git",ref = "package_with_poetry"}
