--- a/flavors/python3-ds-EXASOL-6.0.0/flavor_base/udfclient_deps/Dockerfile
+++ b/flavors/python3-ds-EXASOL-6.0.0/flavor_base/udfclient_deps/Dockerfile
@@ -19,6 +19,8 @@ RUN apt-get -y update && \
 
 RUN addgroup --gid 1000 exasolution
 RUN adduser --disabled-login --uid 1000 --gid 1000 exasolution --gecos "First Last,RoomNumber,WorkPhone,HomePhone"
+RUN addgroup --gid 500 exausers 
+RUN adduser --disabled-login --uid 500 --gid 500 exadefusr --gecos "First Last,RoomNumber,WorkPhone,HomePhone"
 
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
