Add script to language_deps of python3-ds-cuda-preview-EXASOL-6.1.0

--- a/flavors/python3-ds-cuda-preview-EXASOL-6.1.0/flavor_base/language_deps/Dockerfile
+++ b/flavors/python3-ds-cuda-preview-EXASOL-6.1.0/flavor_base/language_deps/Dockerfile
@@ -15,6 +15,7 @@ RUN apt-get update && \
     apt-get -y autoremove && \
     ldconfig
 
+COPY scripts /scripts
 RUN /scripts/install_scripts/install_python3.6_pip.sh
 
 COPY scripts /scripts
